package br.com.amanda.ecommercetop.model;

// Classificacao do modelo usada em regras e filtros.
public enum CategoriaModelo {
    BASICO,
    ESPORTIVO,
    PREMIUM
}