package br.com.amanda.ecommercetop.model;

// Intensidade de sustentacao usada em TipoSustentacao.
public enum NivelSustentacao {
    LEVE,
    MEDIA,
    ALTA
}